src/index.css
/* Constants Css File */
@import 'constants.css';

/* Body of Page */
body {
    background-color: var(--lightShades);
}

/* Header Content */

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.8em;
    background-color: var(--mainColor);
}

.logo {
    display: inline-block;
    text-decoration: underline;
    font-size: 2rem;
    font-style: italic;
    font-weight: bolder;
    color: var(--lightShades);
}

.logo:active {
    color: var(--lightAccent);
}

.nav-menu-icon {
    width: 2em;
    margin-right: 1em;
    user-select: none;
    cursor: pointer;
}

/* Navigation */

.nav-container {
    position: absolute;
    width: 15em;
    height: 6em;
    top: 5em;
    right: 0.5em;
    padding: 3em 0.5em;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    gap: 1em;
    border-radius: 1em;
    background-color: var(--mainColor);
    z-index: 1;
}
.nav-link {
    width: 100%;
    padding: 0.05em 0em;
    text-decoration: none;
    border-radius: 0.5em;
    text-align: center;
    color: var(--lightShades);
    font-size: 1.5em;
}

.nav-link:hover {
    background-color: var(--lightAccent);
}

.nav-link:active {
    color: var(--mainColor);
}

/* Content Styling */

.content-container {
    display: flex;
    flex-direction: column;
    height: 100vh;
}

/* SearchBar Content */

.search-bar-container {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 1em 3em;
}

.search-bar-input {
    padding-left: 0.5em;
    border: none;
    outline: 0.1em solid var(--lightAccent);
    border-radius: 0.5em 0 0 0.5em;
    width: 30em;
    height: 2.5em;
    color: var(--mainColor);
}

.search-bar-input::-webkit-search-cancel-button {
    margin-right: 0.75em;
    -webkit-appearance: none;
    content: URL('/assets/Close-Icon.png');
    width: 1em;
    cursor: pointer;
}

.search-bar-input::placeholder {
    color: var(--mainColor);
}

.search-bar-button {
    padding: 0.68em;
    font-size: 1em;
    border: none;
    border: 0.1em solid var(--lightAccent);
    border-top-right-radius: 0.5em;
    border-bottom-right-radius: 0.5em;
    background-color: var(--mainColor);
    color: var(--lightShades);
    font-weight: 500;
}

.search-bar-button:active {
    border-color: var(--mainColor);
    color: var(--lightAccent);
    background-color: var(--lightShades);
}

/* Card Container */

.cards-container {
    display: flex;
    flex-wrap: wrap;
}

/* Cards */

.event-card {
    position: relative;
    margin: 0.5em auto;
    width: 300px;
    height: 250px;
}

.event-card-content {
    position: absolute;
    bottom: 0;
    border: 0.1em solid var(--lightAccent);
    border-radius: 1em;
    padding-bottom: 0.5em;
    max-width: 300px;
    padding: 0.5em;
    box-shadow: var(--boxShadow) 0px 1px 2px 0px,
        var(--boxShadow) 0px 1px 3px 1px;
}

.event-card-img {
    width: 20em;
    display: block;
    margin-left: auto;
    margin-right: auto;
    aspect-ratio: 16/9;
    user-select: none;
    border-radius: 1em;
}

.event-card-header {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    gap: 1rem;
    padding: 0.25rem 0.5rem 0 0.5rem;
    margin-bottom: 0.5em;
}

.event-title-container {
    width: 100%; /* IE6 needs any width */
    overflow: hidden;
}

.event-card-title {
    margin-top: 0.2em;
    overflow: hidden;
    -o-text-overflow: ellipsis; /* Opera < 11*/
    text-overflow: ellipsis;
    text-wrap: nowrap;
    color: var(--mainColor);
    font-weight: 600;
    max-height: 19px;
}

.event-card-content:hover .event-card-title {
    overflow: visible;
    animation: card-out 0.25s linear both;
}

.event-card-save-icon {
    cursor: pointer;
}

.event-card-info {
    margin-top: 0.5em;
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-style: italic;
    font-weight: 100;
    font-size: 0.8em;
    user-select: none;
    padding: 0 0.5rem;
}

.event-card-date,
.event-card-time {
    color: var(--mainColor);
}

.event-card-link {
    position: absolute;
    left: 35%;
    top: 80%;
    padding: 0.35em 0.8em;
    border-radius: 0.5em;
    border: 0.1em solid var(--lightAccent);
    background-color: var(--lightShades);
    color: var(--mainColor);
    user-select: none;
    text-decoration: none;
    transition: top ease-in-out 0.1s;
}

.event-card-link:hover {
    background-color: var(--mainColor);
    color: var(--lightShades);
    border-color: var(--lightShades);
    border-width: 0.2em;
}
.event-card-link:active {
    background-color: var(--lightShades);
    color: var(--mainColor);
    border-color: var(--lightAccent);
    border-width: 0.2em;
}

/* No Events Show Flags */

.no-events-flag {
    margin-top: 1em;
    margin-bottom: 0.5em;
    user-select: none;
    text-align: center;
    color: var(--mainColor);
    font-size: 3em;
    font-weight: 600;
}

/* Page turner */
.page-turner-container {
    display: flex;
    margin: 1em auto 1em auto;
    gap: 1em;
    align-items: center;
    justify-content: center;
}

.page-turner-button {
    padding: 0.5em;
    border-radius: 0.5em;
    border: none;
    border-radius: 0.5em;
    border: 0.15em solid var(--lightAccent);
    background-color: var(--lightShades);
    color: var(--mainColor);
}

.page-turner-button:active {
    background-color: var(--mainColor);
    color: var(--lightShades);
}

.page-turner-number {
    font-size: 1.5em;
    color: var(--mainColor);
}

/* Footer */

footer {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.5em 1em;
    user-select: none;
    margin-top: auto;
    background-color: var(--mainColor);
}
.footer-contents {
    color: var(--lightShades);
}

/* animation */

@keyframes card-out {
    0% {
        max-height: 19px;
        text-wrap: nowrap;
    }
    1% {
        text-wrap: wrap;
    }
    100% {
        max-height: 100px;
        text-wrap: wrap;
    }
}

@keyframes card-in {
    0% {
        max-height: 100px;
        text-wrap: wrap;
    }
    99% {
        text-wrap: wrap;
    }
    100% {
        max-height: 19px;
        text-wrap: nowrap;
    }
}

